--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,82 +1,373 @@
-# This is the resource bundle for com.amadeus.fiori.ppm.ipf.deiverables.masscreation
-
+#XTIT: this is the title for the fullscreen section
+FULLSCREEN_TITLE=Deliverables List
+#XTIT: this is the title for the fullscreen section for Process Orders
+FULLSCREEN_TITLE_PROC=Monitor Process Orders 
+#XTIT: Title for browser tab
 shellTitle=iPPM
-appTitle=iPPM
-appDescription=Deliverables mass creation
-MainTitle=Deliverables mass creation 
+#XTIT: Title for Production Order List
+ObjectHeaderTitle=Select a variant
+#XTIT: Title for Process Order List
+ObjectHeaderTitle_PROC=Process Order Items
+#XFLD: Number Unit for Launchpad Tile
+NumberUnit=Orders
+appTitle = iPPM
+appDescription = Service Orders
+# -----------------------------------navigation---------
 
-#List Uploaded
-ListServiceOrderTitle=Deliverables mass creation
-HcsOrdExtDesc=SO Description
-ParentId=Parent
-Phase=Parent 
-HcsOrdExtsyst=Ticket System
-HcsOrdExtId=Ticket ID
-OrderId=Order Number
+#XFLD: Error message when no items are selected
+messNoItems=No items selected, select at least one item
+#XFLD: Text on button for navigation to Manage Uncovered Sales Order Items
+btnManageItems=Manage Items
+btnDownload=Download
+#XFLD: Navigation not possible when Fiori Launchpad is not running
+messNoLaunchpad=To be able navigate to another app, you must start this app from the Fiori Launchpad
+#XMSG: Error Message when App was started with wrong URL parameters
+messURLIncorrect=Can't start the application because of invalid URL
+
+# -----------------------------------table--------------
+
+#XTIT: Title for Table
+Results=Results
+#XTOL: Table Personalization (Changing of column order, switch on/off columns)
+xtolTablePersonalization=Personalize Table Layout
+#XTOL: Table Options Icon in the toolbar right (Sorting)
+xtolTableOptions=Additional Table Operations (Sorting)
+#XFLD: Items are being loaded in items table
+itemUpdateStarted=Loading...
+#XFLD: Items are loaded in items table (no data found)
+itemUpdateFinished=No data
+
+# -----------------------------------table--------------
+
+#XBUT: Button for Save Variant Dialog
+ButtonSaveVariant=Save Variant
+#XBUT: Button for Delete Delete Dialog
+ButtonDeleteVariant=Delete Variant
+#XBUT: Button for reset
+ButtonResetLayout=Reset to Default Layout
+#XBUT: Button for Change Properties Dialog
+ButtonChangeProperties=Change Properties
+
+
+#XMSG: Error Message, You do not have sufficient authorization to display data
+MISSING_AUTHORIZATIONS_ERROR=You do not have sufficient authorization to display data
+
+Id=ID
+Method=Method
+Type=Phase Type
 Status=Status
-SortField=Grouping
+DeliverableStatus=Deliverable Status
+OrderTxt=Description
+Team=Team
+ProjectActivity=Parent
+OrderTicket = Ticket
+AllowedActivityType = Allowed Activity Type
+StartDate=Start Date
+StartEndDate=Start / End
+FinishDate=Finish Date
+AssigneeGroup=Assignee Group
+AssigneeName=Assignee Name
+Title=Title
+ReviewDate=Review Date
+LastModifyDate=Last Modif.
+TimeReportingCR= Time Reporting CR
+TimeReportingCRTitle = Time Reporting CR Title
+TimeReportingMode=CR's Reporting Mode
 
-SwitchView=Switch view
-TableSettings=Table settings
-ExcelDownload=Export file
-ExcelUpload=Upload file
-AddNewLine=Add new line
-ControlCheck=Control
-SendPosting=Create
-FileUpoaderTooltip=Upload your file to the local server
-FileUploadPlaceholder=Choose a file for Upload...
 
+btnToDetails=Deliverable Details
+btnToCreate=Create Order
+btnUpdateStatus=Update Status
+btnUndo=Undo
+btnDeliverableCreate=Create Deliverable
+DetailsTitle=Deliverable Details
 
-#Resource Update
-ResourceUpdate=Update resource
-ResourceCreate=Create resource
-EmployeeId=Resource ID
+MainTitle=Service Order Creation
+MasterTitle=Change Requests
+DetailsTitle=Deliverable Details
+AddOperationTitle=Add Operation
+WBSHelpTitle=Choose Phase
+TeamHelpTitle=Choose Team
+ADDHelpTitle=Choose ADD
+CRTitle=WIN@proach CRs not closed
+EditOrderTitle=Update Deliverable
+CreateOrderTitle=Create Deliverable
+ConfirmTitle=Confirm
+
+Organization=Organization
+ServiceOrder=Service Order
+HeaderData=General Information
+Header=General
+AdditionalInfo=Additional Information
+Rank=Rank
+OrderId=Order ID
+OrderType=Order Type
+Description=Description
+Project=Project
+Parent=Parent
+Employee=Employee
+WBSElement=Phase
+MainOpTeam=Main Operation Team
+RDProjectManager=R&D Project Manager
+RDPMOContactName=R&D PMO
+MainOpActivityType=Main Operation Activity Type
+MainOpDescription=Main Operation Description
+MainOpWork=Main Operation Work Time
+ActivityType=Activity Type
+Work=Work
+LatestStartDate=Latest Start Date
+LatestFinishDate=Latest Finish Date
+Operations=Operations
+Costs=Costs
+CostElement=Cost Element
+CostCenter=Cost Center
+PlannedCosts=Planned Costs
+ActualCosts=Actual Costs
+PlannedEffort=Planned Effort
+ActualEffort=Actual Effort
+VariationCurrency=Plan./Act. Variation
+VariationPercent=Plan./Act. Variation (%)
+ADD=ADD
+StatusCode=Status Code
+CRRNID= Time Reporting CR
+ADDs=ADDs
+ADDInfoCode=ADD Info Code
+ADDType=ADD Type
+Responsible=Responsible
+LastChangeTimestamp=Last Modif.
+InfoCode=Info Code
+BudgetLine=Budget Line
+Manday_Short=MD
+Manday_Long=Man-days Actual Effort
+Effort=Effort
+CRs=CRs
+LastTimeSpentDate=Latest Actuals Data: {0}
+NoData=No data
+CostTypes=Cost Types
+FDVAs=FDVAs
+FDVBs=FDVBs
+FDVCs=FDVCs
+VCG=Exercises > FDVB-Sites > FDVC-Sites > Cost Centers
+CGV=FDVB-Sites > FDVC-Sites > Exercises
+SortBy=Sort By
+ExternalParent=Parent Ticket
+OrderSuperior=Parent Ticket
+ExternalIssueType=Issue Type
+ExternalStatus=Ticket Status
+TotalOrderCost=Total Order Cost
+LastCostPeriod=Last Cost Period
+LastPointPeriod=Last Point Period
+LastCatsPeriod=Last CATS Period
+LongDescription=Long Description
+Objective=Objective
+Priority=Priority
+InOutBudget=In Out Budget
+Product=Product
+ExpectedDeliveryDate=Expected Delivery Date
+ExpectedStartDate=Expected Start Date
+ModelAttribute=Model Attribute
+ProfitCenter=Profit Center
+CompanyCode=Company Code
+Company=Company
+GL-1=BU
+GL0=GL0
+GL1=GL1
+GL2=GL2
+GL3=GL3
+Gl2=GL2
+DeliverableTxt=Search
+CreatedOn=Created on
+ChangedOn=Changed on
+CategoryTxt=Category
+Value=Value 
+Currency=Currency
+SuperiorId=SO Grouping
+ParentWBS=Parent
+PhaseKpitStatus=Phase KPIT Status
+ParentCode=Parent
+ParentTxt=Parent Description
+PhaseId=Phase
+PhaseTxt=Phase Description
+Item=Item
+ItemId=Item
+ItemTxt=Item Description
+SoGrouping=SO Grouping
+PurchaseOrder=Purchase Order
+Subphase=SubPhase
+PhaseSubPhase=(Sub)Phase
+PhaseSubPhaseTxt=(Sub)Phase Name 
+Supplier=Supplier
+PoItemMaterialTxt=Material 
+PoItemMaterialGrp=Material Group
+PoItemAccount=Account
+PoItemQuantity=Quantity
+PoItemDeliveredQuantity=Deliv Qty 
+PoItemOpenQuantity=Open Qty
+PoItemValue=Value
+PoItemDeliveredValue=Deliv Value
+PoItemOpenValue=Open Value
+PoItemCompleted=Completed
+OperationDetails=Operation Details
+CostsDetails=Costs Details
+NewCR=New Service Order
+CRToUpdate=Service Order To Update
+CostsByActivityType=Actuals by Activity Type
+CostsByCostCenter=Actuals by Cost Center
+CostsByActivityType_ChangeDimension=By Cost Center
+CostsByCostCenter_ChangeDimension=By Activity Type
+ConfirmButton=Confirm
+ConfirmCancel=Are you sure you want to cancel the service order creation?
+LabelCostHierarchyTableUnit=All Figures in Man-days
+NoChartData=No data to display
+Info=Information
+ItemTooltip=Select a hierarchy level first
+PurchaseOrders=Purchase Orders
+PhaseCustomer=Phase Customer
+
+Status_CRTD=Created
+Status_REL=Released
+Status_TECO=Technically completed
+Status_TECO_Cut=\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0Technically\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\r\ncompleted
+Status_TECO_CutShort=\u00A0\u00A0\u00A0\u00A0Technically\u00A0\u00A0\u00A0\u00A0\r\ncompleted
+Status_CLSD=Closed
+StatusAction_CRTD=Release
+StatusAction_REL=Complete Technically
+StatusAction_TECO=Close
+
+Error=Error
+#ErrorMessage_MissingFields=Please check the consistency of the ADD data
+ErrorMessage_Update_Unauth=You don\u2019t have authorization to update a service order on this GL2
+ErrorMessage_Update_Company=Impossible to change Effort SO status on company non iPPM Time Reporting
+ErrorMessage_Teco=You cannot manually change the status of Effort SO on your company that doesn't use yet iPPM Time Reporting
+#ErrorMessage_Teco=The Service Order could not be technically completed
+#ErrorMessage_Teco=You cannot manually change the status of Effort SO on your company that doesn't use yet iPPM Time Reporting
+ErrorMessage_MissingFields=Please fill all required fields
+ErrorMessage_OneOp=Please enter at least one operation
+ErrorMessage_Update=The Service Order could not be updated
+ErrorMessage_CreateOrder=The Service Order could not be created
+ErrorMessage_ADDDataNotValid=Please check the consistency of the ADD data
+ErrorMessage_CRsNotClosed=Service Order {0} cannot be technically completed because the following WIN@proach CRs are not closed:
+ErrorMessage_CheckCRs=The following Service Orders cannot be technically completed because of open CRs in WIN@proach: {0}. Please check the details of each of these orders.
+ErrorMessage_UpdateStatuses=Problems with the status updates
+ErrorMessage_MissingDateTo=Please fill both 'From' and 'To' fields
+ErrorMessage_MoreThanOneYear=Please select a maximum of 12 months
+ErrorMessage_ToBeforeFrom=The To date must be after the From date
+ErrorMessage_InvalidDates=The start date must be before the finish date
+ErrorMessage_UpdateNotAllowed=Update Not Allowed
+ErrorMessage_UnauthorizedOrderType=Orders of type "{0}" are not updatable
+ErrorMessage_UnauthorizedCreationOrder=Creation Not Allowed
+ErrorMessage_Update_Unauth=You don\u2019t have authorization to update a service order on this GL2
+ErrorMessage_Update_Company=Impossible to change Effort SO status on company non iPPM Time Reporting
+ErrorMessage_Update_Company=Impossible to change Effort SO status on company non iPPM Time Reporting
+SuccessMessage_CreateOrder=The Service Order was successfully created
+SuccessMessage_CreateOrder_suppl=When a SO and CR are created under a Consolidated Phase / Sub-Phase, it takes approximately 15 seconds for the CR to be created and propagated.\r\nPlease refresh the page. 
+SuccessMessage_CreateZTDIOrder=The Service Order {0} was successfully created
+SuccessMessage_Release=If you want to confirm time, please release it
+SuccessMessage_UpdateStatuses=Status updates successful
+SuccessMessage_Update=Service Order successfully updated
+SuccessMessage_Teco=Service Order  technically completed
+ConfrimMessage_Teco =Updating the SO Status to Technically Complete is irreversible
+SuccessMessage_CreateDeliverable=Deliverable successfully created
+SuccessMessage_UpdateDeliverable=Deliverable successfully updated
+ErrorMessage_CreateDeliverable=Error during Deliverable creation
+ErrorMessage_UpdateDeliverable=Error during Deliverable update
+OneOpDialogTitle=Validation Problem
+InfoMessage_SelectSo=Please select at least one Service Order!
+ErrorMessage_OnlyRel=Only released orders can be changed to Technically Complete!
+ErrMsgUnknownParent=Unknown Parent
+
+OneOpDialogButton=OK
+
+CreateButton=Create New CR...
 SaveButton=Save
+TecoButton=Technically Complete
+UpdateButton=Save
 CancelButton=Cancel
-Close=Close
+Search=Search
+SearchTooltip=Search...
+Edit=Edit
+CollapseAllButton=Collapse All
+ExportButton=Export
+SortButton=Sort
 
-#Template
-ExcelSoDescription=Description
-ExcelParentId=Parent
-ExcelTicketSystem=TicketSystem
-ExcelTicketID=TicketID
-ExcelGrouping=Grouping
-ExcelDeliverable=Deliverable
-ExcelTemplate=Excel template
+OperationDialog_ButtonOk=Ok
+OperationDialog_ButtonOk_Add=Add
+OperationDialog_ButtonOk_Upd=Update
+OperationDialog_ButtonDel=Delete
 
-#Check Frontend 
-ErrorMessage_Missing_filled_HcsOrdExtDesc=SO description missing 
-ErrorMessage_Missing_filled_ParentId=Parent missing
-ErrorMessage_Missing_filled_HcsOrdExtsyst=Ticket system missing
-ErrorMessage_Missing_filled_HcsOrdExtId=Ticket ID missing 
-ErrorMessage_Missing_filled_IPPM_HcsOrdExtId=If ticket system is IPPM, ticket ID must be empty 
-ErrorMessage_Value_filled_HcsOrdExtId=Value C-iPPM: Order external ID is BAD :
-ErrorMessage_Value_filled_HcsOrdExtsyst=Accepted ticket systems are JIRA001, TFS, IPPM or RALLY :
+FFOrderType=Order Type
+FFStatus=Phase Status
+FFStartDate=Start Period
+FFFinishDate=End Period
+FFMainWorkCenter=Team
+FFProjectResponsible=Responsible
+FFRDProjectManager=R&D Project Man.
+FFRDPMOContactName=R&D PMO
+FFResponsible=Responsible
+FFTicketSystem=Master Tool
+TicketSystem=Master Tool
 
-
-#Check Data elementary 
-ErrorMessage_Not_found_ParentId=Parent doesn't exist 
-ErrorMessage_Format_ParentId=Plesae respect the format following NN-NNNNN-NN or NN-NN-NNNNN-NN-NN
-ErrorMessage_Not_found_HcsOrdExtsyst=Ticket system is mandatory
-ErrorMessage_Not_found_HcsOrdExtId=Ticket ID is mandatory when the ticket system is JIRA or TFS or RALLY 
-ErrorMessage_Matching_HcsOrdExtsyst_HcsOrdExtId=Ticket ID is mandatory when the ticket system is JIRA or TFS or RALLY
-ErrorMessage_when_posting=Line(s) with error(s) must be corrected or deleted in order the to launch order creations.
-ErrorMessage_Nothing_Selected=Nothing selected 
-
-SuccessMessage_Create_Resource=Resource has been added. Select appropriate filter to search
-SuccessMessage_Update_Resource=Resource has been updated
-SuccessMessage_Delete_Resource=Resource assignment has been removed
-SuccessMessage_Delete_Line=Line has been removed
-SuccessMessage_Create_Order=Order has been added. Select appropriate filter to search
-SuccessMessage_Update_Order=Order has been updated
-SuccessMessage_Delete_Order=Order has been removed
-ErrorMessage_Save=Error during the save
-ErrorMessage_Delete_Resource=Delete error<
-ErrorMessage_Delete_Order=Delete error
-ErrorMessage_No_Filter=Select at least one filter
-ErrorMessage_No_Dates_Filter=Start and end dates are required to see employee's details
-ErrorMessage_Inactive_Resource=This resource is inactive during the period
-ErrorMessage_Empty_Table_Excel=There is no data to export
-ErrorMessage_Load_Excel=Problem occured during the loading of Excel
-ErrorMessage_Invalid_Column_Format=The Excel does not match the right format
-Deliverable=Deliverable
+DefaultLayout=Default Layout
+VariantName=Variant Name
+CreateVariant=Create Variant
+VariantCheckBoxMonitor=Add as Tile for current app
+VariantCheckBoxMonitorTooltip=Creates Tile for directly accessing the \u0022Monitor\u0022 app
+VariantCheckBoxManage=Add as Tile for related  \u0022Manage ...\u0022 app
+VariantCheckBoxManageTooltip=Creates Tile for directly accessing the \u0022Manage ...\u0022 apps
+MONITOR=Monitor
+MANAGE=Manage
+VariantMessageProtectedName=\u0022{0}\u0022 cannot be used as a variant name. Choose a different name for your variant.
+VariantMessageEmptyName=Please insert a name for the variant
+Cancel=Cancel
+Save=Save
+Delete=Delete
+VariantNameExists=Variant already exists
+Yes=Yes
+No=No
+ChangeVariantConfirmationText=Would you like to overwrite the existing variant \u0022{0}\u0022?
+DeleteVariantTitle=Delete Confirmation
+VariantMessageBookmark=Variant \u0022{0}\u0022 was saved and added as tile to home page
+DeleteVariant=Delete Variant \u0022{0}\u0022 and its corresponding tile from home page?
+DeleteTeilConfirmation=Variant \u0022{0}\u0022 was deleted and corresponding tile was removed from home page
+DeleteVariantConfirmation=Variant \u0022{0}\u0022 was deleted 
+VariantMessage=Variant \u0022{0}\u0022 was saved
+ChangeVariant=Change Variant Properties
+UpdateStatusOnlyForReleasedSO=Please select only released service orders
+PurchaseOrderItem=PO Item
+SupplierTxt=Supplier
+PoItemMaterialGrpTxt=Material Group
+PoItemAccountTxt=Account
+PoItemUnit=Unit
+PoItemCurrency=Currency
+vhDialogResponsibleTitle=Responsible
+vhDialogProdcutTitle=Product
+MassUpdateAttributes=Mass Update
+ErrorMessage_MassUpdateItems=Please select at least one Deliverable
+SuccessMessage_MassUpdate=Deliverables successfully updated
+ViewAsList=View as list
+ViewAsHierarchy=View as hierarchy
+ViewAsKanban=View as Kanban
+ResponsibleTxt=Responsible
+StatusTxt=Status
+DeliverableStatus=Deliverable Status
+SoStatus=SO Status
+PriorityTxt=Priority
+ProductTxt=Product
+ExternalLinkUrl=External link URL
+Customer=Customer
+Placeholder_Customer=Select Customer name
+SelectCustomer=Select Customer
+MassClosure=Terminate Deliverables
+AlertMessage_EmptyMassUpdate=No relevant row selected
+ErrMsgExpectedDates=The Expected Start Delivery Date must be before the Expected Delivery Date
+ErrMsgModelAttribute=You can not select an item with Model Attribute Others or Structural Costs
+ErrMsgDeliverableMoveOtherItem=Deliverable cannot be moved to another parent item as this will impact the BPOP
+WarMsgTerminatingDeliverable=Terminating a Deliverable is irreversible, do you want to continue?
+WarMsgDeliverableStatusCompleted=The Deliverable status is completed, do you want to continue?
+WarMsgInOutBudgetChange=FYI: the change of In/Out status will impact the Item Cost Plan
+ErrMsgAuthorizationError=Authorization Error
+InvestmentProfile=Investment Profile
+CommitmentLevel=Commitment Level
+comment=(< or >)
+ExtSystId=Id in External System
+effortSOs=Effort SOs
